# MLOps_HeartR

./: Dockerfile  LICENSE  README.md  mlflow.db  pyproject.toml  tasks.py
mlruns/1/models/m-3cd2009b228345d69659335db62eea56/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml
models/: model.pkl
src/mlops_ha/: api.py  data.py  model.py  train.py
src/mlops_ha/templates/: index.html
tests/: test_data.py
